--- a/demo6.html
+++ b/demo6.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <!-- Add this to your <head> section -->
+<meta name="description" content="Dr. Myriam Lahlou - Chirurgien-Dentiste à Casablanca. Soins dentaires, implants, blanchiment et orthodontie. Prendre rendez-vous au 0522492440">
+<meta name="keywords" content="dentiste Casablanca, Dr Myriam Lahlou, implants dentaires, blanchiment dents, orthodontie">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Myriam Lahlou - Dentiste</title>
